--- a/webresources/css/planner.css
+++ b/webresources/css/planner.css
@@ -9,3 +9,9 @@
 .fc-time{
     display: none;
 }
+.event-category{
+    display: inline-block;
+    color: white;
+    padding: 5px;
+    cursor: pointer;
+}
